<resources>
    <string name="app_name">Piano</string>
    <string name="title_hint">Title</string>
    <string name="composer_hint">Composer</string>
    <string name="opus_hint">Opus or album</string>
    <string name="description_hint">Notes</string>
    <string name="save">Save</string>
    <string name="composer_opus_format" formatted="false">%s, %s</string>
    <string name="switch_byHeart">By heart</string>
    <string name="state_currentlyLearning">Currently learning</string>
    <string name="state_done">Done</string>
    <string name="button_remove">Remove</string>
    <string name="remove_dialog_message">Remove song?</string>
    <string name="cancel">Cancel</string>
    <string name="menu_sortByComposer">Sort by composer</string>
    <string name="state_other">Other</string>
    <string name="state">State:</string>
    <string name="state_notLearning">Not learning</string>
    <string name="state_doneLearning">Done learning</string>
    <string name="switch_wishList">Wish list</string>
    <string name="filter">Filter</string>
    <string name="filter_dialogTitle">Filter</string>
    <string name="ok">OK</string>
    <string name="filter_wishList">In wish list</string>
    <string name="star">Star</string>
    <string name="starred">Starred</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_message">Welcome to the app. Please sign in using Google.</string>
    <string name="sign_in_submessage">This will enable us to safely store your generated data in the cloud.</string>
    <string name="login_failed">Sorry. Login failed</string>
    <string name="signIn_connectionFailed">Connection failed</string>
    <string name="login_successful">Login successful</string>
    <string name="search">Search</string>
    <string name="startedLearning_format" formatted="false">Started learning: %s</string>
    <string name="date_not_set">Not set</string>
    <string name="tags_hint">Tags (separate by comma)</string>
    <string name="untitled">Untitled</string>
    <string name="state_performanceReady">Performance ready</string>
    <string name="practise">Practise</string>
    <string name="practiseDurationMinutes_format">%d minutes</string>
    <string name="add_session">Add session</string>
    <string name="start_session">Start new session</string>
    <string name="duration_hint">Duration</string>
    <string name="duration_minutes_hint">Duration (minutes)</string>
    <string name="sessionDescription_hint">Describe what you have practised</string>
    <string name="session_format" formatted="false">%s\n%d minutes\nDescription: %s</string>
    <string name="xs_open_drawer">Open menu</string>
    <string name="xs_close_drawer">Close drawer</string>
    <string name="tags_drawerItem">Tags…</string>
    <string name="no_tags_yet">There are no tags yet!</string>
    <string name="tags">Tags</string>
</resources>
