<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/composer_selectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/title_editText"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_list_black_24dp" />

        <AutoCompleteTextView
            android:id="@+id/composer_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_editText"
            android:layout_toLeftOf="@id/composer_selectButton"
            android:layout_toStartOf="@id/composer_selectButton"
            android:hint="@string/composer_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/opus_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/composer_autoCompleteTextView"
            android:hint="@string/opus_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/opus_editText"
            android:hint="@string/description_hint"
            android:textSize="16sp" />
    </RelativeLayout>

    <include layout="@layout/layout_divider" />

    <RadioGroup
        android:id="@+id/state_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/stateNotLearning_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/state_notLearning" />

        <RadioButton
            android:id="@+id/stateCurrentlyLearning_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_currentlyLearning" />

        <RadioButton
            android:id="@+id/stateDoneLearning_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_doneLearning" />
    </RadioGroup>

    <include layout="@layout/layout_divider" />

    <LinearLayout
        android:id="@+id/wishList_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/switch_wishList"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/wishList_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include layout="@layout/layout_divider" />

    <LinearLayout
        android:id="@+id/byHeart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="14dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/switch_byHeart"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/byHeart_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include layout="@layout/layout_divider" />

    <LinearLayout
        android:id="@+id/startedLearningDate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/startedLearningDate_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:text="@string/startedLearning_format"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/startedLearningDate_clear_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="14dp"
            android:src="@drawable/ic_clear_black_24dp" />
    </LinearLayout>

    <include layout="@layout/layout_divider" />

    <android.support.v7.widget.ButtonBarLayout
        style="?buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/remove_button"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_remove" />

        <Button
            android:id="@+id/save_button"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>
